--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<form role="search">
+  <input type="text" placeholder="Search some character...">
+  <button type="submit">
+    Search
+  </button>
+</form>
