--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,38 +1,75 @@
 main {
-  background-color: #202020;
+  background-color: var(--bg-gray);
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  .container {
-    max-width: 700px;
-    height: 100%;
-    margin: auto;
+  .header {
+    color: white;
+    text-align: center;
+    margin: 2rem auto 2rem auto;
 
-    .header {
-      color: white;
-      font-size: 2rem;
-      font-weight: 500;
-      text-align: center;
-      margin: 3rem auto 3rem auto;
+    .rick-icon {
+      background: var(--bg-light);
+      width: min-content;
+      padding: 1rem;
+      margin: auto;
+      display: flex;
+      border-radius: 50%;
 
-      .rick-icon {
-        background: white;
-        width: min-content;
-        padding: 1rem;
-        margin: auto;
-        display: flex;
-        border-radius: 50%;
-
-        img {
-          width: 150px;
-        }
-      }
-
-      .rick-title {
-        margin: 2rem auto 2rem auto;
-
+      img {
+        width: 100px;
       }
     }
+
+    .rick-title {
+      font-weight: 500;
+      font-size: 1.8rem;
+      margin: 1rem auto 1rem auto;
+    }
   }
+
+  .container {
+    max-width: var(--limit-size);
+    width: 100%;
+    margin: 0 auto 0 auto;
+    overflow-y: auto;
+
+    .section-content {}
+  }
+
+  .footer {
+    background: var(--bg-dark);
+    color: white;
+    max-width: var(--limit-size);
+    width: 100%;
+    height: 5rem;
+    margin: 0 auto 0 auto;
+    display: grid;
+    align-items: center;
+
+    small {
+      margin-left: 1.5rem;
+    }
+  }
+}
+
+.custombar {
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-dark) var(--bg-light);
+}
+
+.custombar::-webkit-scrollbar {
+  width: 12px;
+}
+
+.custombar::-webkit-scrollbar-track {
+  background-color: var(--bg-light);
+}
+
+.custombar::-webkit-scrollbar-thumb {
+  background-color: var(--bg-dark);
 }
