--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -5,13 +5,17 @@ form {
   input {
     width: 100%;
     padding: 0.5rem 1rem 0.5rem 1rem;
+    border-width: 0;
+    border-style: none;
     border-radius: 0.5rem;
   }
 
   button {
     background: var(--bg-dark);
     color: white;
-    border-radius: 0.5rem;
     padding: 0.5rem 1rem 0.5rem 1rem;
+    border-width: 0;
+    border-style: none;
+    border-radius: 0.5rem;
   }
 }
