--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,12 +46,13 @@ main {
     color: white;
     max-width: var(--limit-size);
     width: 100%;
-    height: 5rem;
+    height: min-content;
     margin: 0 auto 0 auto;
     display: grid;
     align-items: center;
 
     small {
+      padding: 1.5rem 0 1.5rem 0.5rem;
       margin-left: 1.5rem;
     }
   }
