--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -5,21 +5,13 @@
       <img src={{item.image}} alt={{item.name}} class="character-img">
     </figure>
     <article class="character-data">
-      <span>
-        <h3>
-          {{item.name}}
-        </h3>
-        <p>
-          {{item.gender}}
-        </p>
+      <span class="primary">
+        <h3>{{item.name}}</h3>
+        <p>{{item.gender}}</p>
       </span>
-      <span>
-        <h3>
-          {{item.species}}
-        </h3>
-        <p>
-          {{item.status}}
-        </p>
+      <span class="secondary">
+        <h3>{{item.species}}</h3>
+        <p>{{item.status}}</p>
       </span>
     </article>
   </section>
