--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <main>
-  <header class="header">
+  <header class="main-header">
     <figure class="rick-icon">
-      <img src="../assets/rick.svg" alt="Rick logo" />
+      <img src="../assets/favicon.svg" alt="Rick logo" />
     </figure>
-    <h3 class="rick-title">
-      Angular with Rick and Morty
-    </h3>
     <section class="character-search">
+      <h3 class="rick-title">
+        Angular with <br> Rick and Morty
+      </h3>
       <app-search />
     </section>
   </header>
-  <article class="container custombar">
+  <article class="main-container custombar">
     <section class="section-content">
       <app-list />
     </section>
   </article>
-  <footer class="footer">
+  <footer class="main-footer">
     <small>
       Copyright © JhersonRojas 2023
     </small>
