--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -14,6 +14,10 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
+
+      .secondary {
+        text-align: end;
+      }
     }
   }
 }
