--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,6 +55,7 @@ main {
   .main-container {
     max-width: var(--limit-size);
     width: 100%;
+    height: 100%;
     margin: 0 auto 0 auto;
     overflow-y: auto;
   }
