--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -1,23 +1,33 @@
-.characters {
-  .character-item {
-    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
-    display: flex;
-    gap: 1.5rem;
+main {
+  width: 100%;
+  height: 100%;
+  display: grid;
 
-    figure .character-img {
-      width: 50px;
-      border-radius: 50%;
-    }
-
-    .character-data {
-      color: white;
-      width: 100%;
+  .characters {
+    .character-item {
+      padding: 0.5rem 1.5rem 0.5rem 1.5rem;
       display: flex;
-      justify-content: space-between;
+      gap: 1.5rem;
 
-      .secondary {
-        text-align: end;
+      figure .character-img {
+        width: 50px;
+        border-radius: 50%;
+      }
+
+      .character-data {
+        color: white;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .secondary {
+          text-align: end;
+        }
       }
     }
+  }
+
+  .loader {
+    margin: auto;
   }
 }
