--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -3,26 +3,24 @@ main {
   height: 100%;
   display: grid;
 
-  .characters {
-    .character-item {
-      padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  .characters .character-item {
+    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+    display: flex;
+    gap: 1.5rem;
+
+    figure .character-img {
+      width: 50px;
+      border-radius: 50%;
+    }
+
+    .character-data {
+      color: var(--text-light);
+      width: 100%;
       display: flex;
-      gap: 1.5rem;
+      justify-content: space-between;
 
-      figure .character-img {
-        width: 50px;
-        border-radius: 50%;
-      }
-
-      .character-data {
-        color: white;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-
-        .secondary {
-          text-align: end;
-        }
+      .secondary {
+        text-align: end;
       }
     }
   }
