--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -12,7 +12,7 @@ form {
 
   button {
     background: var(--bg-dark);
-    color: white;
+    color: var(--text-light);
     padding: 0.5rem 1rem 0.5rem 1rem;
     border-width: 0;
     border-style: none;
